loading message alignment fixed

--- a/client/css/loading.import.less
+++ b/client/css/loading.import.less
@@ -14,7 +14,7 @@
 	position: absolute;
 	left: 50%;
 	top: 50%;
-	margin: -35px 0 0 -56px;
+	margin: -58px 0 0 -43px;
 	width: 112px;
 	height: 70px;
 	*zoom: 1;
